# sign-bibles-dataset

./: .gitattributes  .gitignore  README.md  pyproject.toml  us-east-3-9d02a0aad75d4145bf879e07c75d8bad.txt
dataprep/DBL-signbibles/DBL-sign/: .gitignore  0_collect_metadatas_and_map_files_to_passage_references.py  1_vref_lookup.py  DBL-manifest-downloader.py  DBL-manifest-generator.py  collect_video_metadata.py  compare_vocabularies.py  dbl_utils.py  find_durations.py  map_files_to_scripture.py  parse_video_file_passages_json_and_output_summary.py  read_grouped_json.py  video_ocr.py  vref_lookup.py
dataprep/DBL-signbibles/ebible_utils/: add_references_to_ocr_manualedit_csvs.py  test_vref_lookup.py  vref_lookup.py
dataprep/DBL-signbibles/huggingface-prep/: prepare_webdataset.py  processing_logger.py  progress_gui.py  run_with_gui.py  upload_to_huggingface.py  webdataset_utils.py
dataprep/DBL-signbibles/sign-segmentation/: download_grounded_sam.py  download_models.py  dwpose_processing.py  run_dwpose_and_save_animation.py  segment_video.py  video_to_pose_mask.py
dataprep/isl/: README.md  bible_text_access.py  biblenlp_util.py  change_mp4_encoding.py  compare_bible_versions.py  dataset_README.md  dataset_stats.json  duration_calculation.py  dwpose_processing.py  edit_data_files.py  ffmpeg_downsample.py  gospel_file_list.py  isl_bible_processing.py  isl_dict_processing.py  isl_gospel_processing.py  main.py  make_tar_files.py  mediapipe_trim.py  mp_processing.py  nextcloud_connect.py  pose_format_util.py  prep_BSB_bible.py  prep_ERV_bible.py  requirements-CPU-only.txt  requirements-dwpose-on_GPU.txt  requirements.txt  requirements_lambda_local.txt  run_parallel.sh  run_parallel_cpu.sh  run_parallel_gpu.sh  run_parallel_mp.sh  s3_connect.py  test_lambda.yaml  test_webdataset.py  video_id_list.py
dataprep/isl/docs/: HOWTO-avail-lambda-fs.md  HOWTO-connect-BCS-VM.md  HOWTO-create-webdataset.md  HOWTO-downsample.md  HOWTO-run-CPU-pipline-on-BCS-VM.md  HOWTO-run-CPU-pipline-on-colab.md  HOWTO-run-GPU-pipline-on-colab.md  ISL_Dataset_CPU_pipline.ipynb  ISL_Dataset_DWPose_run.ipynb  ISL_Dataset_Mediapipe_run.ipynb
dataprep/isl/dwpose/: __init__.py  wholebody.py
dataprep/isl/lambda/: input_list.txt  parallel_run.sh  requirements-dwpose-on_GPU.txt  test_lambda.yaml
dataprep/signbibles-processing/DBL-sign/: DBL-manifest-downloader.py  DBL-manifest-generator.py  requirements.txt
dataprep/signbibles-processing/huggingface-prep/: README.md  (+4 more)
sign_bibles_dataset/data_analysis/: 0_parallel_extract_frames.sh  1_run_brisque_scores.sh  1_run_face_crops_on_frame_folders.sh  2_optional_run_skintone.sh  README.md  analyze_brisque_scores.py  analyze_skintone.py  analyze_transcripts.py  brisque_scores.py  calculate_brisque_scores.py  collect_autosegmenter_durations.py  count_faces_insightface.py  count_transcripts_in_extracted_webdataset.py  extract_faces_from_frames_using_poses.py  extract_webdataset_for_analysis.sh  find_duration_of_all_mp4s_in_folder_not_animation.sh  find_files_with_skintone.sh  find_invalid_videos.py  flattenbcs.py  gather_statistics_from_huggingface.py  generate_autosegmenter_boxplots.py  get_random_facecrops.sh  get_whole_video_transcript_similarity_plot.py  parallel_extract_frames.sh  parallel_run_autosegmenter_analysis.sh  parquet_inspector.py  plot_autosegment_histograms.py  plot_duration_parquets.py  plot_histograms.py  plot_histograms_by_type.py  qualitative_analysis.ipynb  run_analyze_skintone_on_folders_at_certain_depth.sh  run_brisque_scores_on_frame_folders.sh  run_collect_autosegmenter_durations.sh  run_deepface.py  run_insightface_on_frame_folders.sh  run_skintone_on_frame_facecrop_folders.sh  run_skintone_on_frame_folders.sh  save_all_video_durations_as_parquet.py  sign_spotting_qualitative_analysis.ipynb  (+1 more)
sign_bibles_dataset/dataprep/: print_npz.py
sign_bibles_dataset/tasks/: example_load_dataset.py  test_iteration.py
(+124 files in other folders)
